--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "mongoose": "^5.3.7",
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "save": "^2.3.2"
   }
 }
