--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.3.7",
     "nodemon": "^1.18.5",
     "save": "^2.3.2"
